# turin

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  turin.toml.example
.github/workflows/: ci.yml
.turin/: anchorage_test.db-wal  state.db-wal
.turin/harnesses/: budget.lua  coding_agent.lua  context_test.lua  decomposition_test.lua  memory_test.lua  priority_test.lua  queue_test.lua  safety.lua
docs/: ARCHITECTURE.md  HARNESS_GUIDE.md  HOOKS.md  PRIMITIVES.md  TESTING.md  TURIN.md
src/: lib.rs  main.rs
src/commands/: check.rs  init.rs  mod.rs
src/harness/: context.rs  engine.rs  engine.rs_test_append  globals.rs  mod.rs  verdict.rs
src/inference/: embeddings.rs  mod.rs  provider.rs
src/kernel/: builder.rs  config.rs  event.rs  identity.rs  init.rs  mod.rs  session.rs  turn.rs
src/persistence/: mod.rs  schema.rs  search.rs  state.rs
src/tools/: mcp.rs  mod.rs  registry.rs
src/tools/builtins/: edit_file.rs  mod.rs  read_file.rs  shell_exec.rs  submit_plan.rs  submit_task.rs  write_file.rs
tests/: agent_loop_tests.rs  harness_tests.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  session_tests.rs  tool_tests.rs
